# CRM_API

./: .gitignore  README.md  README_RBAC.md  SETUP_GUIDE.md  create_super_admin.py  pyproject.toml
alembic/: env.py
alembic/versions/: 66db8990684a_remove_is_super_admin_column.py  9429f53cc7e9_add_permissions_and_super_admin.py  9eb9e2356418_initial_tables.py
app/: .env  main.py
app/auth/: __init__.py  router.py  schemas.py  services.py
app/core/: config.py  database.py  security.py
app/dependencies/: auth.py  permissions.py
app/roles/: __init__.py  models.py  router.py  schemas.py  services.py
app/super_admin/: __init__.py  router.py
app/users/: __init__.py  models.py  router.py  schemas.py  services.py
